abi/ccharts_abi.h

/* An opaque, immutable OHLC dataset. */
typedef struct ccharts_data ccharts_data;
/* Rendering options. Every color is a NUL-terminated ANSI escape string or
 * NULL for the library default, exactly like cc_settings_t; pass NULL for the
 * whole struct to take every default. Arbitrary escapes (256-color,
 * truecolor) are accepted — the strings are not interpreted here. */
typedef struct ccharts_settings {
    const char* rise_color;
    const char* fall_color;
    const char* bg_color;
    const char* area_color;
    int32_t single_color;
    int32_t show_prices;
    int32_t show_times;
} ccharts_settings;
/* ---------------------------- Building data ---------------------------- */

/* Builds a dataset from four equal-length price columns. `ts` holds epoch
 * seconds and may be NULL (all timestamps unknown). The arrays are copied
 * immediately and never retained, which keeps cgo's pointer-passing rules and
 * every GC's object lifetime out of the picture. */
CCHARTS_API int32_t ccharts_from_arrays(const double* open,
                                               const double* high,
                                               const double* low,
                                               const double* close,
                                               const int64_t* ts,
                                               int32_t n,
                                               ccharts_data** out);
/* Builds a dataset from the fixed-schema JSON accepted by cc_json_to_ohlc. */
CCHARTS_API int32_t ccharts_parse_json(const char* json,
                                              ccharts_data** out);
/* Builds a dataset from CSV: open,high,low,close[,timestamp] per line.
 * Unlike cc_str_to_ohlc, which fills a caller-sized array and never reports
 * how many rows it actually parsed, this counts the parseable lines first, so
 * the dataset never carries trailing zero-filled candles. */
CCHARTS_API int32_t ccharts_parse_csv(const char* csv,
                                             char value_separator,
                                             char line_separator,
                                             ccharts_data** out);
/* Number of candles, or 0 for NULL. */
CCHARTS_API int32_t ccharts_data_len(const ccharts_data* data);
/* Releases a dataset. NULL is a no-op. */
CCHARTS_API void ccharts_data_free(ccharts_data* data);
/* ------------------------------ Rendering ------------------------------ */

/* Renders a line chart. On CCHARTS_OK, *out points to a NUL-terminated UTF-8
 * string owned by the caller (release with ccharts_string_free) and *out_len,
 * when not NULL, receives its length in bytes. On error *out is set to NULL. */
CCHARTS_API int32_t ccharts_line(const ccharts_data* data,
                                        int32_t width, int32_t height,
                                        const ccharts_settings* settings,
                                        char** out, size_t* out_len);
/* Renders a candlestick chart; same contract as ccharts_line. */
CCHARTS_API int32_t ccharts_candle(const ccharts_data* data,
                                          int32_t width, int32_t height,
                                          const ccharts_settings* settings,
                                          char** out, size_t* out_len);
/* Releases a string returned by ccharts_line / ccharts_candle. */
CCHARTS_API void ccharts_string_free(char* s);
/* ---------------------------- Introspection ---------------------------- */

/* ANSI escape for a ccharts_color_index, or NULL when out of range. */
CCHARTS_API const char* ccharts_color(int32_t index);
/* Human-readable message for a status code; never NULL. */
CCHARTS_API const char* ccharts_error_message(int32_t status);
/* Library version ("0.2.1"), shared by every binding. */
CCHARTS_API const char* ccharts_version(void);
/* CC_MAX_DIM / CC_MAX_CELLS, so bindings do not duplicate the limits. */
CCHARTS_API int32_t ccharts_max_dim(void);
CCHARTS_API int32_t ccharts_max_cells(void);